# wasm.directory

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  Justfile  README.md  action.yml  azure.yaml  docker-compose.yml  docker-entrypoint.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: registry-entry.yml
.github/scripts/: registry-entry.mjs  upsert-comment.sh
.github/workflows/: ci.yaml  coverage.yaml  publish.yml  registry-entry.yml  release-bump.yml  release.yml  wasm-action.yml
crates/component-cli/: Cargo.toml
crates/component-cli-internal-run/: Cargo.toml
crates/component-cli-internal-run/src/: lib.rs
crates/component-cli-internal-run/src/http_hooks/: mod.rs  p2.rs  p3.rs
crates/component-cli/src/: main.rs  util.rs
crates/component-cli/src/compose/: mod.rs
crates/component-cli/src/init/: mod.rs
crates/component-cli/src/install/: errors.rs  mod.rs  progress_bar.rs
crates/component-cli/src/local/: mod.rs
crates/component-cli/src/publish/: mod.rs
crates/component-cli/src/registry/: inspect.rs  mod.rs  notify.rs  publish.rs  search.rs  sync.rs
crates/component-cli/src/run/: errors.rs  http.rs  mod.rs
crates/component-cli/src/self_/: mod.rs
crates/component-cli/tests/: test.rs
crates/component-cli/tests/snapshots/: test__cli_main_help_snapshot.snap  test__cli_registry_help_snapshot.snap  test__cli_registry_notify_help_snapshot.snap
crates/component-frontend/: Cargo.toml
crates/component-frontend/src/: footer.rs  layout.rs  lib.rs
crates/component-frontend/src/components/: page_shell.rs  page_sidebar.rs  wit_render.rs
crates/component-frontend/src/components/ds/: cta_strip.rs  fields.rs  footer.rs  hero.rs  input_group.rs  install_card.rs  install_widget.rs  labels.rs  metadata_table.rs  mod.rs  navbar.rs  package_card.rs  package_row.rs  page_header.rs  principles_grid.rs  quick_start.rs  search_bar.rs  tabs.rs  typography.rs  wit_item.rs
crates/component-frontend/src/components/ds/snapshots/: component_frontend__components__ds__cta_strip__tests__snapshot_disabled.snap  component_frontend__components__ds__fields__tests__snapshot.snap  component_frontend__components__ds__footer__tests__snapshot.snap  component_frontend__components__ds__hero__tests__snapshot.snap  component_frontend__components__ds__labels__tests__snapshot.snap  component_frontend__components__ds__principles_grid__tests__snapshot.snap  component_frontend__components__ds__tabs__tests__snapshot.snap  component_frontend__components__ds__typography__tests__snapshot.snap
crates/component-frontend/src/pages/: all.rs  child_component.rs  design_system.rs  detail.rs  home.rs  interface.rs  item.rs  namespace.rs  package.rs  package_shell.rs  queue.rs  search.rs  sidebar.rs  world.rs
crates/component-frontend/src/wit_doc/: convert.rs  mod.rs  types.rs
crates/component-manifest/src/: package.rs
crates/component-meta-registry/: Cargo.toml  README.md
crates/component-meta-registry-client/src/: client.rs
crates/component-meta-registry/src/: config.rs  indexer.rs  lib.rs  main.rs  server.rs
crates/component-package-manager-migration/src/migrations/: m20260101_000002_create_wit_tables.rs  (+1 more)
crates/component-package-manager/src/: lib.rs
crates/wasm-manifest/: Cargo.toml  README.md
crates/wasm-manifest/src/: lib.rs  lockfile.rs  manifest.rs  package.rs  permissions.rs  validation.rs
crates/wasm-meta-registry-client/: Cargo.toml  README.md
crates/wasm-meta-registry-client/src/: client.rs  lib.rs
crates/wasm-meta-registry-types/: Cargo.toml  README.md
crates/wasm-meta-registry-types/src/: lib.rs
crates/wasm-package-manager/: Cargo.toml
crates/wasm-package-manager-migration/: Cargo.toml
crates/wasm-package-manager-migration/src/: lib.rs
crates/wasm-package-manager-migration/src/entities/: component_target.rs  fetch_queue.rs  mod.rs  oci_layer.rs  oci_layer_annotation.rs  oci_manifest.rs  oci_manifest_annotation.rs  oci_referrer.rs  oci_repository.rs  oci_tag.rs  sync_meta.rs  wasm_component.rs  wit_package.rs  wit_package_dependency.rs  wit_world.rs  wit_world_export.rs  wit_world_import.rs
crates/wasm-package-manager-migration/src/migrations/: m20260101_000001_create_oci_tables.rs  m20260101_000003_create_wasm_tables.rs  m20260101_000004_create_fetch_queue.rs  mod.rs  triggers.rs
crates/wasm-package-manager/src/: config.rs  convert.rs  credential_helper.rs  lib.rs  permissions.rs  progress.rs  resolver.rs  xdg.rs
crates/wasm-package-manager/src/compose/: errors.rs  mod.rs  resolver.rs
crates/wasm-package-manager/src/manager/: errors.rs  logic.rs  mod.rs  models.rs
crates/wasm-package-manager/src/manager/install/: errors.rs  mod.rs
crates/wasm-package-manager/src/oci/: errors.rs  image_entry.rs  logic.rs  mod.rs  raw.rs
crates/wasm-package-manager/src/publish/: mod.rs  wit_packager.rs
crates/wasm-package-manager/src/storage/: config.rs  db_config.rs  known_package.rs  mod.rs  store.rs
crates/wasm-package-manager/src/storage/models/: mod.rs
crates/wasm-package-manager/src/types/: detect.rs  mod.rs  parser.rs  wit_package.rs
crates/wit2cli/: Cargo.toml
crates/wit2cli/src/: cli.rs  wit.rs
crates/wit2cli/tests/: snapshots.rs
crates/wit2cli/tests/snapshots/: snapshots__resources_are_rejected.snap
crates/xtask/: Cargo.toml
crates/xtask/src/: cleanup.rs  sql.rs
docs/: README.md  architecture.md  azure-deployment.md  configuration.md  usage.md
infra/: main.bicep  main.bicepparam  resources.bicep
infra/hooks/: postprovision.ps1  postprovision.sh  preprovision.ps1  preprovision.sh
infra/modules/: backend.bicep  container-apps-environment.bicep  dns.bicep  frontend.bicep  log-analytics.bicep  postgresql.bicep
registry/: autostamp.toml  pulseengine.toml  wasmcloud.toml  yosh.toml
scripts/: bind-custom-domains.ps1  bind-custom-domains.sh  publish-images.sh  set_workspace_version.py  setup-azure-deploy.sh
tests/docker/: degradation.sh  full-restart.sh  lib.sh  new-component.sh  new-namespace.sh  persistence.sh  postgres.sh  run-all.sh  smoke.sh
(+9 files in other folders)
