[package]
name = "component-cli-internal-run"
description = "Internal WebAssembly component execution for component-cli"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
miette = { workspace = true }
component-manifest = { workspace = true }
wasmparser = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true, features = ["net", "time"] }
tracing = { workspace = true }

[lints]
workspace = true
