[package]
name = "component"
description = "Unified WebAssembly developer tools"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[lib]
name = "component"
path = "src/lib.rs"

[[bin]]
name = "component"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
futures-concurrency = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
comfy-table = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde_json = { workspace = true }
termcolor = { workspace = true }
tokio = { workspace = true, features = ["net"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
component-detector = { workspace = true }
component-manifest = { workspace = true }
component-meta-registry-types = { workspace = true }
wasm-metadata = { workspace = true }
component-package-manager = { workspace = true, features = ["http-sync", "compose"] }
component-cli-internal-run = { workspace = true }
wasmparser = { workspace = true }
wac-parser = { workspace = true }
wac-graph = { workspace = true }
wac-resolver = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
hyper = { workspace = true }
thiserror = { workspace = true }
wit2cli = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
oci-client = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
component-detector = { workspace = true }
wasm-encoder = "0.248"
component-package-manager = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }

[lints]
workspace = true
