[package]
name = "wasm-meta-registry-client"
description = "HTTP client for fetching package metadata from a component-meta-registry instance"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[features]
default = ["client"]
# Enable native HTTP client + ETag-based sync. Without this on non-WASI targets, only shared data types are available.
client = ["dep:reqwest", "dep:exponential-backoff", "dep:tokio"]

[dependencies]
anyhow = { workspace = true }
exponential-backoff = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
wasm-meta-registry-types = { workspace = true }

[target.'cfg(all(target_os = "wasi", target_env = "p2"))'.dependencies]
wstd = { workspace = true }

[lints]
workspace = true
