[package]
name = "wasm-meta-registry-types"
description = "Shared wire types for the component-meta-registry API"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
