[package]
name = "wasm-package-manager-migration"
description = "SeaORM migrations and entity definitions for the wasm-package-manager database"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[lib]
name = "wasm_package_manager_migration"
path = "src/lib.rs"

[dependencies]
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
