[package]
name = "wasm-package-manager"
description = "A stateful library to interact with OCI registries storing WebAssembly Components"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[features]
default = []
# serde is always enabled (kept as a no-op feature for backward compatibility)
serde = []
# Enable HTTP sync from meta-registry
http-sync = ["wasm-meta-registry-client/client", "serde"]
# Enable WAC-based component composition
compose = ["wac-parser", "wac-graph", "wac-resolver"]

[dependencies]
anyhow = { workspace = true }
cacache = { workspace = true }
pubgrub = { workspace = true }
miette = { workspace = true }
dirs = { workspace = true }
docker_credential = { workspace = true }
futures-concurrency = { workspace = true }
oci-client = { workspace = true }
oci-wasm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true }
wasm-package-manager-migration = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
toml = { workspace = true }
component-detector = { workspace = true }
wasm-manifest = { workspace = true }
wasm-meta-registry-client = { workspace = true }
wasm-meta-registry-types = { workspace = true }
wac-parser = { workspace = true, optional = true }
wac-graph = { workspace = true, optional = true }
wac-resolver = { workspace = true, optional = true }
wasmparser = { workspace = true }
wasm-metadata = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
