[package]
name = "wit2cli"
description = "Translate a WebAssembly component's WIT exports into a `clap` sub-CLI"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasmparser = { workspace = true }
wasmtime = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
