[package]
name = "xtask"
version = "0.3.0"
edition = "2024"
publish = false

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
ctrlc = "3"
notify = "8"
tempfile = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
semver = { workspace = true }
component-package-manager-migration = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }

[lints]
workspace = true
